refactor: code cleanup and improvements